test/e2e/testing-manifests/ingress/static-ip/dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoheaders-https
  labels:
    app: echoheaders-https
spec:
  replicas: 2
  selector:
    matchLabels:
      app: echoheaders-https
  template:
    metadata:
      labels:
        app: echoheaders-https
    spec:
      containers:
      - name: echoheaders-https
        image: k8s.gcr.io/echoserver:1.6
        ports:
        - containerPort: 8080
