test/e2e/testing-manifests/ingress/static-ip/ing.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: static-ip
  # This annotation is added by the test upon allocating a staticip.
  # annotations:
  #  kubernetes.io/ingress.global-static-ip-name: "staticip"
spec:
  tls:
  # This assumes tls-secret exists.
  # To generate it run the make in this directory.
  - secretName: tls-secret
  backend:
    serviceName: echoheaders-https
    servicePort: 80
