test/e2e/testing-manifests/ingress/static-ip/rc.yaml
apiVersion: v1
kind: ReplicationController
metadata:
  name: echoheaders-https
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: echoheaders-https
    spec:
      containers:
      - name: echoheaders-https
        image: gcr.kubernetes.io/echoserver:1.4
        ports:
        - containerPort: 8080
